--- a/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
+++ b/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
@@ -4,3 +4,6 @@ steps:
       '-m', 'unittest', 'serverless/functions/admin_add_tweet/tests/test_main.py',]
     id: 'unit-tests-admin-add-tweet'
     waitFor: ['-']
+
+substitutions:
+  _PROJECT: ${PROJECT}
