unit tests cicd first function

--- a/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
+++ b/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
@@ -6,4 +6,6 @@ steps:
     waitFor: ['-']
 
 substitutions:
-  _PROJECT: ${PROJECT}
+  _PROJECT: ${_PROJECT}
+  _LOCATION: ${_LOCATION}
+  TRIGGER_NAME: ${TRIGGER_NAME}
