--- a/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
+++ b/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
@@ -8,4 +8,4 @@ steps:
 substitutions:
   _PROJECT: ${_PROJECT}
   _LOCATION: ${_LOCATION}
-  _TRIGGER_NAME: ${_TRIGGER_NAME}
+  _TRIGGER_NAME: cf-unittests
