--- a/quickstart/cloudbuild.yaml
+++ b/quickstart/cloudbuild.yaml
@@ -3,7 +3,7 @@ steps:
   entrypoint: /bin/sh
   args:
   - '-c'
-  - 'chmod +x *.sh && ./quickstart/pulumi.sh'
+  - 'chmod +x quickstart/*.sh && ./quickstart/pulumi.sh'
   env:
   # We use substitution for an example. Your Pulumi access token is sensitive and as such should be encrypted.
   # See the Encrypted Variables section below on how to do that.
