--- a/quickstart/cloudbuild.yaml
+++ b/quickstart/cloudbuild.yaml
@@ -7,8 +7,9 @@ steps:
   env:
   # We use substitution for an example. Your Pulumi access token is sensitive and as such should be encrypted.
   # See the Encrypted Variables section below on how to do that.
-  - 'PULUMI_ACCESS_TOKEN=$_PULUMI_ACCESS_TOKEN'
+  - 'PULUMI_ACCESS_TOKEN=$$_PULUMI_ACCESS_TOKEN
   - 'BUILD_TYPE=$_BUILD_TYPE'
+  secretEnv: ['_PULUMI_ACCESS_TOKEN']
 
 availableSecrets:
   secretManager:
