--- a/quickstart/cloudbuild.yaml
+++ b/quickstart/cloudbuild.yaml
@@ -7,11 +7,10 @@ steps:
   env:
   # We use substitution for an example. Your Pulumi access token is sensitive and as such should be encrypted.
   # See the Encrypted Variables section below on how to do that.
-  - 'PULUMI_ACCESS_TOKEN=$PULUMI_TOKEN'
   - 'BUILD_TYPE=$_BUILD_TYPE'
-  secretEnv: ['PULUMI_TOKEN']
+  secretEnv: ['PULUMI_ACCESS_TOKEN']
 
 availableSecrets:
   secretManager:
   - versionName: projects/63397135473/secrets/pulumi-key/versions/2
-    env: 'PULUMI_TOKEN'
+    env: 'PULUMI_ACCESS_TOKEN'
