--- a/serverless/ci_cd/utils/Dockerfile
+++ b/serverless/ci_cd/utils/Dockerfile
@@ -2,7 +2,7 @@ FROM python:3.8.12
 
 COPY requirements.txt .
 
-RUN apt-get -q update && apt-get -qqy install python3 python3-pi 
+RUN apt-get -q update && apt-get -qqy install python3 python3-pip
 
 RUN python3 -m pip install -r requirements.txt
 
