--- a/pulumi.cloudbuild.yaml
+++ b/pulumi.cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-- name: '${_LOCATION}-docker.pkg.dev/${_PROJECT}/utils/python-utils'
+- name: '${LOCATION}-docker.pkg.dev/${PROJECT}/utils/python-utils'
   entrypoint: /bin/sh
   args:
   - '-c'
