--- a/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
+++ b/serverless/functions/ci_cd/unit_tests.cloudbuild.yaml
@@ -23,11 +23,11 @@ steps:
     id: 'unit-tests-clear-tweet-list'
     waitFor: ['-']
   
-  - name: '${_LOCATION}-docker.pkg.dev/${_PROJECT}/utils/python-utils'
-    args: [
-      '-m', 'unittest', 'serverless/functions/list_tweet_language/tests/test_main.py',]
-    id: 'unit-tests-listtweet_language'
-    waitFor: ['-']
+#  - name: '${_LOCATION}-docker.pkg.dev/${_PROJECT}/utils/python-utils'
+#    args: [
+#      '-m', 'unittest', 'serverless/functions/list_tweet_language/tests/test_main.py',]
+#    id: 'unit-tests-listtweet_language'
+#    waitFor: ['-']
 
 substitutions:
   _PROJECT: ${_PROJECT}
