--- a/serverless/functions/ci_cd/deploy.cloudbuild.yaml
+++ b/serverless/functions/ci_cd/deploy.cloudbuild.yaml
@@ -170,7 +170,7 @@ steps:
             '--runtime=python38',
             '--entry-point=main',
             '--trigger-http',
-            '--source=gs://tweets-cloudfu nctions-zip/list_tweet_random.zip',
+            '--source=gs://tweets-cloudfunctions-zip/list_tweet_random.zip',
             '--env-vars-file=serverless/functions/.env-admin.yaml']
     id: 'deploy-list_tweet_random'
     waitFor: ['add-to-storage-list_tweet_random']
@@ -196,7 +196,7 @@ steps:
             '--runtime=python38',
             '--entry-point=main',
             '--trigger-http',
-            '--source=gs://tweets-cloudfu nctions-zip/list_tweet_search.zip',
+            '--source=gs://tweets-cloudfunctions-zip/list_tweet_search.zip',
             '--env-vars-file=serverless/functions/.env-admin.yaml']
     id: 'deploy-list_tweet_search'
     waitFor: ['add-to-storage-list_tweet_search']
@@ -222,7 +222,7 @@ steps:
             '--runtime=python38',
             '--entry-point=main',
             '--trigger-http',
-            '--source=gs://tweets-cloudfu nctions-zip/list_tweet_username.zip',
+            '--source=gs://tweets-cloudfunctions-zip/list_tweet_username.zip',
             '--env-vars-file=serverless/functions/.env-admin.yaml']
     id: 'deploy-list_tweet_username'
     waitFor: ['add-to-storage-list_tweet_username']
